# solgo

./: BUILD.bazel  LICENSE  go.mod  go.sum  go_repositories.bzl  sol_repositories.bzl
BUILD-patches/: BUILD.bazel  com_github_datadog_zstd.patch  com_github_divergencetech_ethier_simbackend.patch  com_github_divergencetech_ethier_solcover.patch  com_github_karalabe_usb.patch  com_github_streamingfast_firehose_ethereum.patch  com_github_streamingfast_firehose_ethereum_types.patch  com_google_cloud_go_kms.patch  foundry_ethers-contract-abigen.patch  foundry_ethers-core.patch  foundry_ethers-solc.patch  foundry_svm-rs-builds.patch  io_opencensus_go_contrib_exporter_stackdriver.patch  opencensus_proto.patch
bazel/: defs.bzl
bazel/js_bundled_binary/: BUILD.bazel  defs.bzl  esbuild.config.mjs
bazel/sol/: defs.bzl
bazel/sol/foundry/: defs.bzl
bazel/ts_proto_library/: defs.bzl
bazel/ts_proto_library/grpc_gen_ts/: BUILD.bazel  main.go  servicedef.go.tmpl
contracts/constants/: BUILD.bazel  foundry.toml  remappings.txt
contracts/constants/src/: Testing.sol
contracts/constants/src/events/: IERC721Events.sol
contracts/constants/test/: Math.t.sol
contracts/delegate/: BUILD.bazel  IDelegationRegistry.sol  delegate.go
contracts/delegate/delegateimpl/: BUILD.bazel  DelegationRegistry.sol  doc.go
contracts/entropy/: BUILD.bazel  EntropyOracle.bin.hex  EntropyOracle.sol  EntropyOracle.t.sol  EntropyOracleStub.t.sol  EntropyOracleV2.sol  EntropyOracleV2.t.sol  IEntropyOracleV2.sol  foundry.toml  remappings.txt
contracts/entropy/entropyserver/: BUILD.bazel  main.go  main_test.go
contracts/erc/: BUILD.bazel  Interfaces.sol
contracts/presets/: BUILD.bazel  foundry.toml  remappings.txt
contracts/presets/src/: MintPassBurner.sol  MintPassRedeemer.sol  SellableRedeemableRestrictableERC721.sol
contracts/presets/src/pool/: ABProjectPoolSellable.sol  ProjectPoolSellable.sol
contracts/presets/test/: ABProjectPoolSellable.t.sol  MintPassRedeemer.t.sol  ProjectPoolSellable.t.sol
contracts/redemption/: BUILD.bazel  README.md  remappings.txt
contracts/redemption/src/: BasicSingleRecordedRedeemer.sol  BasicSingleRedeemer.sol  RankingRedeemer.sol  RedeemableTokenRedeemer.sol  (+1 more)
contracts/sellers/: BUILD.bazel  foundry.toml  remappings.txt
contracts/sellers/src/base/: InternallyPriced.sol  InternallyPricedTokenGated.sol  PerAddressLimited.sol  SellableCallbacker.sol  Seller.sol  SupplyLimited.sol  TokenApprovalChecker.sol  TokenUsageTracker.sol
contracts/sellers/src/mechanics/: MoonbirdNestingLevelGated.sol  NestingLevelLib.sol  Public.sol  SignatureGated.sol  TokenGated.sol
contracts/sellers/src/presets/: CallbackerWithAccessControl.sol  DelegatedMoonbirdNestingLevelGatedSettablePrice.sol  DelegatedTokenGatedSettablePrice.sol  DevSeller.sol  EphemeralAirdropper.sol  ExactSettableFixedPrice.sol  PublicLimitedExactFixedPrice.sol  RoleGatedFreeOfCharge.sol  SettablePerAddressLimited.sol  SignatureGatedExact.sol  TokenHolderAirdropper.sol
contracts/sellers/src/sellable/: BaseSellable.sol  SellableERC721ACommon.sol  SellableERC721ACommonByProjectID.sol
contracts/sellers/test/: EphemeralAirdoppper.t.sol  PublicLimitedExactFixedPrice.t.sol  RoleGatedFreeOfCharge.t.sol  SellableERC721ACommon.t.sol  SellableERC721ACommonByProjectID.t.sol  SellerTest.sol  SignatureGated.t.sol  SignatureGatedExact.t.sol  TokenHolderAirdropper.t.sol
contracts/sellers/test/NestingLevel/: ANestingLevelGated.t.sol  DelegatedMoonbirdNestingLevelGatedSettablePrice.t.sol  DelegatedNestingLevelGated.t.sol
contracts/sellers/test/TokenGated/: ATokenGated.t.sol  DelegatedTokenGated.t.sol  TokenGated.t.sol
contracts/uups/: BUILD.bazel  foundry.toml  remappings.txt
contracts/uups/src/: OnlyUpgradeable.sol  UUPSDummy.sol  UUPSMigrations.s.sol
contracts/uups/test/: UUPSMigrations.t.sol
demo/: BUILD.bazel  README.md  end2end_test.go
demo/client/: BUILD.bazel  client.test.js  index.ts  tsconfig.json
demo/contract/: BUILD.bazel  Demo.sol  contract_test.go
demo/proto/: BUILD.bazel  proof-demo.proto
demo/server/: BUILD.bazel  server.go
go/dbtx/: BUILD.bazel  dbtx.go  dbtx_test.go
go/discordbot/: BUILD.bazel  discordbot.go  reactions.go
go/erc721/: BUILD.bazel  TestableERC721.sol  erc721.go  server.go  server_test.go
go/eth/: BUILD.bazel  RW.sol  client.go  client_test.go  eth.go  eth_test.go  nullable.go  nullable_test.go  signer_test.go
go/ethkms/: BUILD.bazel  doc.go  gcp.go  gcp_test.go
go/ethtest/: BUILD.bazel  ethtest.go  rpcdouble.go  rpcdouble_test.go  simbackend.go
go/firehose/: BUILD.bazel  Emitter.sol  ethservice.go  ethservice_test.go  firehose.go
go/flagtype/: BUILD.bazel  flagtype.go  flagtype_test.go
go/flipside/: BUILD.bazel  common.go  createQueryRun.go  flipside.go  flipside_test.go  getQueryRun.go  getQueryRunResults.go
go/galois/: BUILD.bazel  convolution.go  convolution_test.go  fft.go  fft_test.go  galois.go  galois_test.go  polynomial.go  polynomial_test.go
go/gcstest/: BUILD.bazel  gcstest.go
go/gnosis/: BUILD.bazel  csv.go  csv_test.go
go/grpctest/: BUILD.bazel  grpctest.go  grpctest_test.go
go/grpctest/proto/: BUILD.bazel  echo.proto
go/httperr/: BUILD.bazel  httperr.go  httperr_test.go
go/ipfs/: BUILD.bazel  ipfs.go  ipfs_test.go
go/memconv/: BUILD.bazel  memconv.go  memconv_test.go
go/oauthsrc/: BUILD.bazel  oauthsrc.go  oauthsrc_test.go
go/protovalid/: BUILD.bazel  protovalid.go  protovalid_test.go
go/secrets/: BUILD.bazel  gcp.go  secrets.go  secrets_test.go
go/shuffle/: BUILD.bazel  shuffle.go  shuffle_test.go
go/solcover/: BUILD.bazel  coverage.go  coverage_test.go  source_test.go
go/spawner/: BUILD.bazel  postgres.go  singletons.go  spawner.go  spawner_test.go
go/sync/: BUILD.bazel
go/tenderly/: BUILD.bazel  tenderly.go  tenderly_test.go
go/usbwallet/: BUILD.bazel  accounts.go  doubles_test.go  eventloop.go  ledger.go  wallet.go  wallet_test.go
godoc/: BUILD.bazel  README.md
proto/eth/: BUILD.bazel  convert.go  eth.go  eth.proto  eth_test.go  validate_test.go
typescript/: BUILD.bazel  grpc.ts  tsconfig.json
(+29 files in other folders)
