load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@aspect_rules_sol//sol:defs.bzl", "sol_remappings", "sol_sources")

sol_sources(
    name = "sellers_sol_src",
    srcs = glob(["src/**/*.sol"]),
    remappings = {"proof/sellers/": "./contracts/sellers/src/"},
    visibility = [
        "//contracts:__subpackages__",
        "//projects/nfts/nestingsign:__pkg__",
    ],
    deps = [
        "@ERC721A_4-2-3",
        "@delegation-registry_2d1a158b",
        "@ethier_0-55-0",
        "@openzeppelin-contracts_4-8-1",
    ],
)

# Todo(arran): add sol_binary targets that simply confirm that these compile.

sol_remappings(
    name = "raw_remappings",
    deps = [
        ":sellers_sol_src",
        "//contracts/constants",
        "@ds-test_013e6c64",
        "@forge-std_1-4-0",
    ],
)

write_source_files(
    name = "write_remappings",
    files = {"remappings.txt": ":remappings"},
)

genrule(
    name = "remappings",
    srcs = [":raw_remappings"],
    outs = ["workspace_rel_remappings.txt"],
    cmd_bash = """
cat $(location :raw_remappings) | sed "s|=./external/|=../../bazel-out/../external/|g" | sed "s|=./contracts/|=../|g" > $@
""",
)
