load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/cxkoda/solgo/demo/server",
    visibility = ["//visibility:private"],
    deps = [
        "//demo/contract",
        "//demo/proto",
        "@com_github_divergencetech_ethier//ethtest",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//status",
    ],
)

go_binary(
    name = "server",
    args = ["--logtostderr"],
    embed = [":server_lib"],
    visibility = [
        "//demo:__subpackages__",
        "//devtools/godoc:all_packages",
    ],
)

