load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "flipside",
    srcs = [
        "common.go",
        "createQueryRun.go",
        "getQueryRun.go",
        "getQueryRunResults.go",
    ],
    importpath = "github.com/cxkoda/solgo/go/flipside",
    visibility = ["//visibility:public"],
    deps = [
        "//go/secrets",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "flipside_test",
    srcs = ["flipside_test.go"],
    embed = [":flipside"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
