load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gcstest",
    testonly = True,
    srcs = ["gcstest.go"],
    importpath = "github.com/proofxyz/solgo/go/gcstest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//crypto",
        "@org_golang_google_api//option",
    ],
)
