load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gnosis",
    srcs = ["csv.go"],
    importpath = "github.com/cxkoda/solgo/go/gnosis",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_shopspring_decimal//:decimal",
    ],
)

go_test(
    name = "gnosis_test",
    srcs = ["csv_test.go"],
    embed = [":gnosis"],
    deps = [
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_gocarina_gocsv//:gocsv",
        "@com_github_google_go_cmp//cmp",
        "@com_github_shopspring_decimal//:decimal",
    ],
)
