load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ipfs",
    srcs = ["ipfs.go"],
    importpath = "github.com/proofxyz/solgo/go/ipfs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ipfs_go_libipfs//files",
        "@com_github_ipfs_interface_go_ipfs_core//:interface-go-ipfs-core",
        "@com_github_ipfs_interface_go_ipfs_core//options",
        "@com_github_ipfs_interface_go_ipfs_core//path",
        "@com_github_ipfs_kubo//config",
        "@com_github_ipfs_kubo//core",
        "@com_github_ipfs_kubo//core/coreapi",
        "@com_github_ipfs_kubo//plugin/loader",
        "@com_github_ipfs_kubo//repo/fsrepo",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
    ],
)

go_test(
    name = "ipfs_test",
    srcs = ["ipfs_test.go"],
    data = glob(["testdata/**"]),
    embed = [":ipfs"],
    embedsrcs = [
        "testdata/bar.txt",
        "testdata/foo.txt",
        "testdata/leet",
    ],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_ipfs_go_cid//:go-cid",
        "@com_github_ipfs_go_libipfs//files",
        "@com_github_ipfs_interface_go_ipfs_core//:interface-go-ipfs-core",
        "@com_github_ipfs_interface_go_ipfs_core//path",
        "@com_github_ipfs_kubo//config",
        "@com_github_ipfs_kubo//core",
    ],
)
